# adventofcode-2020

./: package-lock.json  package.json
haskell/: aoc2020.cabal
haskell/app/: Day07.hs
javascript/: package.json
javascript/src/: day01.js  day04.js  day05.js  day07.js  day11.js  day12.js  day13.js  day14.js  day16.js  day18.js  day20.js  day22.js  day24.js  day25.js
purescript/: package-lock.json  spago.dhall
purescript/src/: Day01.purs  Day02.purs  Day03.purs  Day04.purs  Day05.purs  Day06.purs
src/: day02.js  day03.js  day05.js  day06.js  day08.js  day09.js  day10.js  day11.js  day12.js  day13.js  day15.js  day17.js  day19.js  day21.js  day23.js
