cabal-version:      2.4
name:               aoc2020
version:            0.1.0.0

extra-source-files: CHANGELOG.md

executable day07
    main-is:          Day07.hs
    build-depends:    base ^>=4.14.3.0 && <5
                    , parsec
                    , containers
    hs-source-dirs:   app
    default-language: Haskell2010
